--- a/lang/fr/games.json
+++ b/lang/fr/games.json
@@ -1,13 +1,9 @@
 {
-    "showcase" : {
+    "showcase": {
         "error": "Votre navigateur ne supporte pas la balise vidéo.",
         "button": "Voir plus"
     },
     "games": {
-        "title": {
-            "1": "Nos ",
-            "2": "jeux",
-            "3": " vidéos"
-        }
+        "title": "Nos <b>jeux</b> vidéos"
     }
 }
