--- a/lang/fr/news.json
+++ b/lang/fr/news.json
@@ -1,9 +1,3 @@
 {
-    "title": {
-        "1": "Nos ",
-        "2": "actus",
-        "3": " en",
-        "4": "temps",
-        "5": "réel"
-    }
+    "title": "Nos <b>actus</b> en <span id='text1'>temps</span> <span id='text2'>réel</span>"
 }
