--- a/lang/en/index.json
+++ b/lang/en/index.json
@@ -5,10 +5,7 @@
         "description": "Plongez dans l'univers de notre studio de développement de jeux vidéo indépendant, où créativité et passion se rencontrent."
     },
     "latestProject" : {
-        "title": {
-            "1": "Notre dernier jeu : ",
-            "2": "BOT A.N.I.C"
-        },
+        "title": "<b>BOT A.N.I.C</b>",
         "subtitle": "Suivez la conception de notre tout premier jeu.",
         "paragraph": {
             "1" : "Une immersion totale : Les mécaniques de jeu sont conçues pour vous faire oublier que vous êtes devant un écran, vous plongeant entièrement dans l'expérience.",
