--- a/lang/fr/index.json
+++ b/lang/fr/index.json
@@ -5,12 +5,12 @@
         "description": "Plongez dans l'univers de notre studio de développement de jeux vidéo indépendant, où créativité et passion se rencontrent."
     },
     "latestProject" : {
-        "title": "<b>BOT A.N.I.C</b>",
-        "subtitle": "Suivez la conception de notre tout premier jeu.",
+        "title": "<b>Dernier projet</b>",
+        "subtitle": "Suivez la conception de notre tout dernier jeu.",
         "paragraph": {
-            "1" : "Une immersion totale : Les mécaniques de jeu sont conçues pour vous faire oublier que vous êtes devant un écran, vous plongeant entièrement dans l'expérience.",
-            "2" : "Des graphismes impressionnants : Grâce à Unreal Engine 5, nous exploitons les dernières avancées technologiques pour renforcer l'immersion visuelle et vous offrir des environnements à couper le souffle.",
-            "3" : "Un récit interactif : Laissez-vous transporter par une histoire pleine de rebondissements, qui s'adapte à vos choix et à votre style de jeu."
+            "1" : "A Little Adventure Platformer est un platformer 3D dans gratuit.",
+            "2" : "Plongez dans l'univers A Little Adventure avec ce platformer vibrant où chaque niveau regorge d'obstacles et de défis.",
+            "3" : " Affrontez des canons, activez des mécanismes ingénieux et collectez des objets pour espérer compléter les niveaux."
         },
         "button": "En savoir plus"
     }
